k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: java-pipeline
  annotations:
    k8s.v1.cni.cncf.io/default-network: '[]'
