k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-webapp
  labels:
    app: java-webapp
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: java-webapp
